// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Core/Img Default 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 iyWydp sc-eEFsat jGBTLB"
  >
    <img
      class="sc-bXupvT gVZcLG"
      src=""
    />
  </div>
</div>
`;

exports[`Storyshots Core/Img With Fallback 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 iyWydp sc-eEFsat jGBTLB"
  >
    <img
      class="sc-bXupvT gVZcLG"
      src="imgthatfails"
    />
  </div>
</div>
`;
